# FilesCustodian

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LinuXKeeper.sh  README.md  p_notes.md  readme.md
.github/workflows/: ci_cd.yml
FilesCustodianCore/: Cargo.toml
FilesCustodianCore/src/: lib.rs  speed_time.rs
FilesCustodianGUI/: custom_file_manager.py  file_explorer.py  file_json.py  keys.py  main_window.py  settings_window.py  setup.py
Tests/: test1.py  test2.py  test3.py  test_backup.py  test_restore.py
tests/: test1.py  test2.py  test3.py
