[workspace]
members = ["FilesCustodianCore"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Mansur Azatbek <mansur62624@gmail.com>"]
license = "GPL-3.0"
description = "Backend part for copying files"
repository = "https://github.com/m62624/FilesCustodian"


[profile.release]
lto = true
